--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-contrib-compress": "~0.5.3",
-    "grunt-mocha-test": "^0.10.2",
+    "grunt-mocha-test": "0.10.2",
     "grunt-newer": "~0.6.0",
     "grunt-chrome-manifest": "~0.2.0",
-    "grunt-browserify": "^2.0.3",
-    "browserify": "^3.38.1",
+    "grunt-browserify": "2.0.3",
+    "browserify": "3.38.1",
     "chai": "1.8.1",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0"
   },
   "dependencies": {
     "connect": "~1.7.0",
-    "extend": "^1.2.1",
-    "jquery": "^1.11.0"
+    "extend": "1.2.1",
+    "jquery": "1.11.0"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   }
 }
